<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.11</version>
        <relativePath/>
    </parent>
    <groupId>com.apps.deen-sa</groupId>
    <artifactId>personal-ai-parent</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>personal-ai-parent</name>
    <properties>
        <java.version>21</java.version>
        <surefire.failIfNoSpecifiedTests>false</surefire.failIfNoSpecifiedTests>
    </properties>
    <modules>
        <module>core</module>
        <module>modules/expense</module>
        <module>modules/saree-work</module>
        <module>application</module>
    </modules>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.testcontainers</groupId><artifactId>testcontainers-bom</artifactId>
                <version>1.19.0</version><type>pom</type><scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.apps.deen-sa</groupId><artifactId>personal-ai-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.apps.deen-sa</groupId><artifactId>expense</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.apps.deen-sa</groupId><artifactId>saree-work</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
